#443: Added proper security checks around connections to Cancellation Policy objects